--- a/tex/pseudocode.tex
+++ b/tex/pseudocode.tex
@@ -3,280 +3,73 @@
 
 \fontsize{8pt}{10pt}\selectfont
 \begin{verbatim}
-класс Папка:
-{
-    название
-    внутрЭлемУказатель
 
-    конструктор()
-    деструктор()
+класс Вектор
+{
+    x, y, z
+
+    операцияСложения(другой_вектор)
+    операцияВычитания(другой_вектор)
+    скалярноеУмножение(другой_вектор)
+    векторноеУмножение(другой_вектор)
+    длина()
+    косинусМежду(другой_вектор)
+    уголМежду(другой_вектор)
 }
 
-класс Файл:
+Вектор::операцияСложения(другой_вектор)
 {
-    название
-    размерФайла
-
-    конструктор()
+    новый = Вектор()
+    новый.x = этот.x + другой_вектор.x
+    новый.y = этот.y + другой_вектор.y
+    новый.z = этот.z + другой_вектор.z
+    вернуть новый
 }
 
-класс ФайловаяСистема
+Вектор::операцияВычитания(другой_вектор)
 {
-    началоСпискаУказатель
-    текущийУказательНаЭлемент
-
-    создатьФайл(Файл)
-    удалитьФайл(Файл)
-    создатьПапку(Папка)
-    удалитьПапку(Папка)
-
-    показатьТекущуюДиректорию()
-    изменитьТекущуюДиректорию(папка)
-
-    загрузитьФайловуюСистему(имяФайла)
-    выгрузитьФайловуюСистему()
-
-    конструктор()
-    деструктор()
+    новый = Вектор()
+    новый.x = этот.x - другой_вектор.x
+    новый.y = этот.y - другой_вектор.y
+    новый.z = этот.z - другой_вектор.z
+    вернуть новый
 }
 
-процедура меню()
+Вектор::векторноеУмножение(другой_вектор)
 {
-    ФайловаяСистема ГлавФайлСис
-
-    вывести("<Приветствие и инструкция>")
-
-    выход := ложь;
-    пока (не(выход))
-    {
-        вывести("Текущая директория:" + <текущая_директория>)
-
-        вывести("Выберите действие")
-        вывести("1. Создать файл")
-        вывести("2. Создать папку")
-        вывести("2. Удалить файл")
-        вывести("3. Удалить папку")
-        вывести("4. Изменить директорию")
-        вывести("5. Вывести все элементы текущей папки")
-        вывести("6. Загрузить структуру")
-        вывести("7. Сохранить структуру")
-        вывести("8. Создать структуру")
-        вывести("9. Выйти из программы")
-    
-        выбор := ввестиЦелоеЧисло()
-        
-        переключатель (выбор) {
-        случай 1: // Создание файла
-        {
-            ввести(название, размер, датаСоздания)
-            Файл.название = название
-            Файл.датаСоздания = датаСоздания
-            Файл.размер = размер
-
-            ГлавФайлСис.создатьФайл(Файл)
-        }
-        случай 2: // Создание папки
-        {
-            ввести(название, датаСоздания)
-            Папка.название = название
-            Папка.датаСоздания = датаСоздания
-
-            ГлавФайлСис.создатьПапку(Папка)
-        }
-        случай 3: // Удаление файла
-        {
-            ГлавФайлСис.показатьТекущуюДиректорию()
-            ввести(названиеФайла)
-
-            Файл = ГлавФайлСис.найтиЭлемент(названиеФайла, тип = Файл)
-            если(Файл != пустая_ссылка)
-            {
-                ГлавФайлСис.удалитьФайл(Файл)
-            }
-            иначе
-            {
-                вывести("В текущей директории нет файла с данным названием")
-            }
-        }
-        случай 4: // Удаление папки
-        {
-            ГлавФайлСис.показатьТекущуюДиректорию()
-            ввести(названиеПапки)
-
-            Папка = ГлавФайлСис.найтиЭлемент(названиеПапки, тип = Папка)
-            если(Папка != пустая_ссылка)
-            {
-                ГлавФайлСис.удалитьПапку(Папка)
-            }
-            иначе
-            {
-                вывести("В текущей директории нет папки с данным названием")
-            }
-        }
-        случай 5: // Изменение директории
-        {
-            ГлавФайлСис.показатьТекущуюДиректорию()
-            ввести(названиеПапки)
-            ГлавФайлСис.изменитьТекущуюДиректорию(названиеПапки)
-        }
-        случай 6: // Вывод элементов текущей директории
-        {
-            ГлавФайлСис.показатьТекущуюДиректорию()
-        }
-        случай 7: // Загрузка структуры
-        {
-            вывести("<Предуреждение о перезаписи старой структуры>")
-            ввести(продолжить)
-
-            если(продолжить)
-            {
-                ГлавФайлСис.деструктор()
-                название_файла = найтиФайл()
-                ГлавФайлСис.загрузитьФайловуюСистему(название_файла)
-            }
-        }
-        случай 8: // Сохранение структуры
-        {
-            если(ГлавФайлСис.неПуста())
-            {
-                ввести(название_файла)
-                ГлавФайлСис.выгрузитьФайловуюСистему(название_файла)
-            }
-        }
-        случай 9: // Создание новой структуры
-        {
-            ввести(продолжить)
-            
-            если(продолжить)
-            {
-                ГлавФайлСис.деструктор()
-                ГлавФайлСис.конструктор()
-            }
-        } 
-        по умолчанию:
-            пропустить
-        }
-    }
+    новый = Вектор()
+    новый.x = этот.y * другой_вектор.z - этот.z * другой_вектор.y
+    новый.y = этот.z * другой_вектор.x - этот.x * другой_вектор.z
+    новый.z = этот.x * другой_вектор.y - этот.y * другой_вектор.x
+    вернуть новый
 }
 
-процедура создатьФайл(новыйФайл)
+Вектор::скалярноеУмножение(другой_вектор)
 {
-    создатьЭлем(новыйФайл)
+    результат = 0
+    результат += этот.x * другой_вектор.x
+    результат += этот.y * другой_вектор.y
+    результат += этот.z * другой_вектор.z
+    вернуть результат
 }
 
-процедура создатьПапку(новаяПапка)
+Вектор::длина()
 {
-    создатьЭлем(новаяПапка)
+    результат = 0
+    результат += этот.x * этот.x
+    результат += этот.y * этот.y
+    результат += этот.z * этот.z
+    вернуть кореньИз(результат)
 }
 
-процедура создатьЭлем(новыйЭлем)
+Вектор::косинусМежду(другой_вектор)
 {
-    если(<сменена текущая директория>)
-    {
-        временный = текущийУказательНаЭлемент.внутрЭлемУказатель
-        если(временный != пустая_ссылка)
-        {
-            пока(<не конец списка>)
-                временный = временный.следЭлемУказатель
-            текущийУказательНаЭлемент = временный
-        }
-    }
-    если(<файловая система пуста>)
-    {
-        началоСпискаУказатель = новыйЭлем
-        текущая_директория = новыйЭлем
-        выйти
-    }
-    если(<выбранная папка пуста>)
-    {
-        текущийУказательНаЭлемент.внутрЭлемУказатель = новыйЭлем
-        новыйЭлем.предЭлемУказатель = текущийУказательНаЭлемент
-
-        текущийУказательНаЭлемент = новыйЭлем
-        выйти
-    }
-    иначе
-    {
-        текущийУказательНаЭлемент.следЭлемУказатель = новыйЭлем
-        новыйЭлем.предЭлемУказатель = текущийУказательНаЭлемент
-        текущийУказательНаЭлемент = новыйЭлем
-        
-        выйти
-    }
+    вернуть этот.скалярноеУмножение(другой_вектор) / этот.длина() / другой_вектор.длина()
 }
 
-процедура удалитьФайл(бывшийФайл)
+Вектор::уголМежду(другой_вектор)
 {
-    удалитьЭлем(бывшийФайл)
-}
-
-процедура удалитьПапку(бывшаяПапка)
-{
-    удалитьЭлем(бывшаяПапка)
-}
-
-процедура удалитьЭлем(бывшийЭлем)
-{
-    если(<файл является единственным>)
-    {
-        началоСпискаУказатель = пустая_ссылка
-        удалить бывшийЭлем
-
-        выйти
-    }
-    если(<файл является началом списка>)
-    {
-        началоСпискаУказатель = бывшийЭлем.следЭлемУказатель
-        бывшийЭлем.следЭлемУказатель.предЭлемУказатель = пустая_ссылка
-        удалить бывшийЭлем
-
-        выйти
-    }
-    если(<файл является концом списка>)
-    {
-        бывшийЭлем.предЭлемУказатель.следЭлемУказатель = пустая_ссылка
-        текущийУказательНаЭлемент = бывшийЭлем.предЭлемУказатель
-
-        удалить бывшийЭлем
-        выйти
-    }
-    иначе
-    {
-        бывшийЭлем.предЭлемУказатель.следЭлемУказатель = бывшийЭлем.следЭлемУказатель
-        бывшийЭлем.следЭлемУказатель.предЭлемУказатель = бывшийЭлем.предЭлемУказатель
-        удалить бывшийЭлем
-    }
-}
-
-Папка::деструктор()
-{
-    временныйУказатель = Папка.внутрЭлемУказатель
-
-    пока(временныйУказатель != пустая_ссылка)
-    {
-        буфер = временныйУказатель.следЭлемУказатель
-        удалить временныйУказатель
-        временныйУказатель = буфер
-    }
-}
-
-процедура выгрузитьФайловуюСистему(названиеФайла)
-{
-    вписатьЭлемент(файловыйПоток, ДирЭлем, 0)
-}
-
-процедура вписатьЭлемент(файловыйПоток, ДирЭлем, уровеньВложенности)
-{
-    файловыйПоток
-        << уровеньВложенности * '\t'
-        << ДирЭлем
-        << '\n'
-    
-    если(ДирЭлем.получитьСодержимое() != пустая_ссылка)
-        вписатьЭлемент(файловыйПоток, ДирЭлем.получитьСодержимое(), уровеньВложенности + 1)
-    
-    если(ДирЭлем.следЭлемУказатель != пустая_ссылка)
-        вписатьЭлемент(файловыйПоток, ДирЭлем.следЭлемУказатель, уровеньВложенности)
+    вернуть арккосинус(этот.косинусМежду(другой_вектор))
 }
 
 \end{verbatim}
