--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,7 @@
 \include{tex//content}
 \include{tex//task}
 \include{tex//pseudocode}
+\include{tex//info}
 \include{tex//coding_env}
 \include{tex//input_output}
 \include{tex//list_of_modules}
