--- a/tex/titlepage.tex
+++ b/tex/titlepage.tex
@@ -3,20 +3,25 @@
 \newpage
 \fontsize{14pt}{16pt}\selectfont
 \begin{center}
-    \textbf{МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ РОССИЙСКОЙ ФЕДЕРАЦИИ} \\
-    ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ ОБРАЗОВАТЕЛЬНОЕ УЧРЕЖДЕНИЕ \\
-    ВЫСШЕГО ОБРАЗОВАНИЯ \\
-    «МОСКОВСКИЙ АВИАЦИОННЫЙ ИНСТИТУТ \\ 
+    \textbf{МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ РОССИЙСКОЙ ФЕДЕРАЦИИ}
+
+    ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ ОБРАЗОВАТЕЛЬНОЕ УЧРЕЖДЕНИЕ
+
+    ВЫСШЕГО ОБРАЗОВАНИЯ
+
+    «МОСКОВСКИЙ АВИАЦИОННЫЙ ИНСТИТУТ
+
     (национальный исследовательский университет)» (МАИ)
 
     \vspace{1cm}
-    Кафедра 703 \\
+    Кафедра 703
 
     \vspace{1cm}
-    Курсовая работа \\
-    по курсу «Технологии разработки программного обеспечения» \\
+    Курсовая работа
 
-    Вариант № 3 \\
+    по курсу «Технологии разработки программного обеспечения»
+
+    Вариант № 3
 \end{center}
 
 \vspace{1cm}
@@ -27,7 +32,7 @@
 
     Выполнил студент \\
     группы М7О-406С-21 \\
-    Плужник\,В.М \\
+    Плужник\,В.М. \\
     \vspace{0.5cm}
     \rule{5cm}{0.4pt} \\
 
