--- a/tex/instruction.tex
+++ b/tex/instruction.tex
@@ -3,7 +3,7 @@
 
 \begin{enumerate}
     
-    \begin{figure}[h!]
+    \begin{figure}[H]
         \item Запустите программу.
         \vspace{0.3cm}
         
@@ -13,7 +13,7 @@
     \end{figure}
 
     
-    \begin{figure}[h!]
+    \begin{figure}[H]
         \item Введите желаемые значения координат векторов.
         \vspace{0.3cm}
 
@@ -22,8 +22,8 @@
         \caption{}
     \end{figure}
 
-    
-    \begin{figure}[h!]
+
+    \begin{figure}[H]
         \item Нажмите кнопку <Рассчитать> и получить значение желаемой величины.
         \vspace{0.3cm}
 
