--- a/tex/pseudocode.tex
+++ b/tex/pseudocode.tex
@@ -2,76 +2,79 @@
 \section{Псевдокод}
 
 {
-    \fontsize{8pt}{10pt}\selectfont
-    \begin{verbatim}
+\fontsize{10pt}{12pt}\selectfont
+\begin{verbatim}
 
-    класс Вектор
-    {
-        x, y, z
+класс Вектор
+{
+    x, y, z
 
-        операцияСложения(другой_вектор)
-        операцияВычитания(другой_вектор)
-        скалярноеУмножение(другой_вектор)
-        векторноеУмножение(другой_вектор)
-        длина()
-        косинусМежду(другой_вектор)
-        уголМежду(другой_вектор)
-    }
+    операцияСложения(другой_вектор)
+    операцияВычитания(другой_вектор)
+    скалярноеУмножение(другой_вектор)
+    векторноеУмножение(другой_вектор)
+    длина()
+    косинусМежду(другой_вектор)
+    уголМежду(другой_вектор)
+}
 
-    Вектор::операцияСложения(другой_вектор)
-    {
-        новый = Вектор()
-        новый.x = этот.x + другой_вектор.x
-        новый.y = этот.y + другой_вектор.y
-        новый.z = этот.z + другой_вектор.z
-        вернуть новый
-    }
+Вектор::операцияСложения(другой_вектор)
+{
+    новый = Вектор()
+    новый.x = этот.x + другой_вектор.x
+    новый.y = этот.y + другой_вектор.y
+    новый.z = этот.z + другой_вектор.z
+    вернуть новый
+}
 
-    Вектор::операцияВычитания(другой_вектор)
-    {
-        новый = Вектор()
-        новый.x = этот.x - другой_вектор.x
-        новый.y = этот.y - другой_вектор.y
-        новый.z = этот.z - другой_вектор.z
-        вернуть новый
-    }
+Вектор::операцияВычитания(другой_вектор)
+{
+    новый = Вектор()
+    новый.x = этот.x - другой_вектор.x
+    новый.y = этот.y - другой_вектор.y
+    новый.z = этот.z - другой_вектор.z
+    вернуть новый
+}
 
-    Вектор::векторноеУмножение(другой_вектор)
-    {
-        новый = Вектор()
-        новый.x = этот.y * другой_вектор.z - этот.z * другой_вектор.y
-        новый.y = этот.z * другой_вектор.x - этот.x * другой_вектор.z
-        новый.z = этот.x * другой_вектор.y - этот.y * другой_вектор.x
-        вернуть новый
-    }
+Вектор::векторноеУмножение(другой_вектор)
+{
+    новый = Вектор()
+    новый.x = этот.y * другой_вектор.z - этот.z * другой_вектор.y
+    новый.y = этот.z * другой_вектор.x - этот.x * другой_вектор.z
+    новый.z = этот.x * другой_вектор.y - этот.y * другой_вектор.x
+    вернуть новый
+}
 
-    Вектор::скалярноеУмножение(другой_вектор)
-    {
-        результат = 0
-        результат += этот.x * другой_вектор.x
-        результат += этот.y * другой_вектор.y
-        результат += этот.z * другой_вектор.z
-        вернуть результат
-    }
+Вектор::скалярноеУмножение(другой_вектор)
+{
+    результат = 0
+    результат += этот.x * другой_вектор.x
+    результат += этот.y * другой_вектор.y
+    результат += этот.z * другой_вектор.z
+    вернуть результат
+}
 
-    Вектор::длина()
-    {
-        результат = 0
-        результат += этот.x * этот.x
-        результат += этот.y * этот.y
-        результат += этот.z * этот.z
-        вернуть кореньИз(результат)
-    }
+Вектор::длина()
+{
+    результат = 0
+    результат += этот.x * этот.x
+    результат += этот.y * этот.y
+    результат += этот.z * этот.z
+    вернуть кореньИз(результат)
+}
 
-    Вектор::косинусМежду(другой_вектор)
-    {
-        вернуть этот.скалярноеУмножение(другой_вектор) / этот.длина() / другой_вектор.длина()
-    }
+Вектор::косинусМежду(другой_вектор)
+{
+    вернуть
+        этот.скалярноеУмножение(другой_вектор) /
+        этот.длина() /
+        другой_вектор.длина()
+}
 
-    Вектор::уголМежду(другой_вектор)
-    {
-        вернуть арккосинус(этот.косинусМежду(другой_вектор))
-    }
+Вектор::уголМежду(другой_вектор)
+{
+    вернуть арккосинус(этот.косинусМежду(другой_вектор))
+}
 
-    \end{verbatim}
+\end{verbatim}
 }
