--- a/tex/info.tex
+++ b/tex/info.tex
@@ -40,7 +40,7 @@
 {
     \setlength{\parindent}{0pt}
     \begin{table}[h!]
-        \begin{tabularx}{\textwidth}{ |X|X|X| }
+        \begin{tabularx}{\textwidth}{ |>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X| }
             
         \hline
         Класс&
@@ -88,6 +88,13 @@
 \newpage
 
 \begin{landscape}
+
+    \pagestyle{fancy}
+    \renewcommand{\headrulewidth}{0pt}
+    \setlength{\headheight}{17pt}
+    \fancyhf{}
+    \fancyhead[R]{\rotatebox{90}{\thepage}}
+
     \setlength{\parindent}{0pt}
     
     \begin{longtable}{ |>{\raggedright\arraybackslash}p{6cm}|>{\raggedright\arraybackslash}p{6cm}|>{\raggedright\arraybackslash}p{5cm}|>{\raggedright\arraybackslash}p{5cm}| }
